AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}            EVENFOUND_LIBRARY_SOURCES)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/crypto     EVENFOUND_LIBRARY_SOURCES)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/helpers    EVENFOUND_LIBRARY_SOURCES)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/message    EVENFOUND_LIBRARY_SOURCES)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/network    EVENFOUND_LIBRARY_SOURCES)


ADD_LIBRARY(${EVENFOUND_LIBRARY} STATIC
    ${EVENFOUND_LIBRARY_SOURCES}
)
TARGET_INCLUDE_DIRECTORIES(${EVENFOUND_LIBRARY}
    PUBLIC      ${CMAKE_SOURCE_DIR}/include
    PRIVATE     ${EF_GEN_INCLUDE_DIR}
)
TARGET_LINK_LIBRARIES(${EVENFOUND_LIBRARY}
    ${GMP_LIBRARY}
    ${Boost_LIBRARIES}
)
